Correction des contraste avec wave (WaveAIM) sur les flèches de navigation et le background des filtres de la gallery

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -6052,7 +6052,7 @@ textarea.form-control-lg {
   justify-content: center;
   width: 15%;
   padding: 0;
-  color: #fff;
+  color: #575757;
   text-align: center;
   background: none;
   border: 0;
