--- a/assets/style.css
+++ b/assets/style.css
@@ -113,7 +113,7 @@ h2 {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #1B5F6F;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
